@@ -2,7 +2,6 @@ package eu.trixner.base.server.model;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum UserType {
     ADMIN(
@@ -13,14 +12,14 @@ public enum UserType {
             Role.ROLE_USER_CAN_CHANGE_PASSWORD
     );
 
-    public Role[] roles;
+    private final Role[] roles;
 
     UserType(Role... roles) {
         this.roles = roles;
     }
 
     public List<String> getRolesStrings() {
-        return Arrays.stream(roles).map(Role::getAuthority).collect(Collectors.toList());
+        return Arrays.stream(roles).map(Role::getAuthority).toList();
     }
 
     public Role[] getRoles() {
